--- a/index.html
+++ b/index.html
@@ -5,11 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio website</title>
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <ul>
+                <li>About me</li>
+                <li>My work</li>
+                <li>Contact me</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article id="container1">
+            <h1>Hi I am frontend webdeveloper</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis officiis, animi reiciendis tenetur
+                molestiae optio neque architecto obcaecati blanditiis? Distinctio doloribus ratione sit obcaecati eius
+                reiciendis earum rerum impedit exercitationem!</p>
+        </article>
+        <article id="container2">
+            <div>Work 1</div>
+            <div>Work 2</div>
+            <div>Work 3</div>
+            <div>work 4</div>
+        </article>
+        <article id="container3">
+            <ul>
+                <li>Phone</li>
+                <li>Adress</li>
+                <li>Social networks</li>
+            </ul>
+        </article>
+    </main>
+    <footer>
+        <p>2019</p>
+    </footer>
 </body>
 
 </html>
