--- a/index.html
+++ b/index.html
@@ -2,47 +2,56 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>Portfolio website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
+  <title>Portfolio website</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>About me</li>
-                <li>My work</li>
-                <li>Contact me</li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <article id="container1">
-            <h1>Hi I am frontend webdeveloper</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis officiis, animi reiciendis tenetur
-                molestiae optio neque architecto obcaecati blanditiis? Distinctio doloribus ratione sit obcaecati eius
-                reiciendis earum rerum impedit exercitationem!</p>
-        </article>
-        <article id="container2">
-            <div>Work 1</div>
-            <div>Work 2</div>
-            <div>Work 3</div>
-            <div>work 4</div>
-        </article>
-        <article id="container3">
-            <ul>
-                <li>Phone</li>
-                <li>Adress</li>
-                <li>Social networks</li>
-            </ul>
-        </article>
-    </main>
-    <footer>
-        <p>2019</p>
-    </footer>
+  <header class="header">
+    <nav class="nav">
+      <div class="nav-btn">
+        <a class="nav-btn__link" href="#">About Me</a>
+      </div>
+      <div class="nav-btn">
+        <a class="nav-btn__link" href="#">My Work</a>
+      </div>
+      <div class="nav-btn">
+        <a class="nav-btn__link" href="#">Contact Me</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <article class="container1">
+      <h1 class="main-text">Hi, I am</h1>
+      <h1 class="main-text">Tomas <span class="main-text__surname">Murinas</span></h1>
+      <h1 class="main-text">Front End Web Developer</h1>
+      <p class="about-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis officiis, animi
+        reiciendis tenetur
+        molestiae optio neque architecto obcaecati blanditiis? Distinctio doloribus ratione sit obcaecati eius
+        reiciendis earum rerum impedit exercitationem!</p>
+    </article>
+    <article class="container2">
+      <div class="container2-item">
+        <div class="container2-item__items">Work 1</div>
+        <div class="container2-item__items">Work 2</div>
+        <div class="container2-item__items">Work 3</div>
+        <div class="container2-item__items">work 4</div>
+      </div>
+    </article>
+    <article class="container3">
+      <ul class="container3-item">
+        <li class="container3-item__items">Phone</li>
+        <li class="container3-item__items">Adress</li>
+        <li class="container3-item__items">Social networks</li>
+      </ul>
+    </article>
+  </main>
+  <footer>
+    <p>2019</p>
+  </footer>
 </body>
 
 </html>
